fix letter spacing on small screens

--- a/public/custom.css
+++ b/public/custom.css
@@ -288,7 +288,7 @@ background-color: rgba(0,0,0,0);
 .contact-me a {
   color: #312cb3;
    font-size: 20px; 
-    font-size: 2.0vw;
+    font-size: 1.7vw;
 }
 @media (max-width: 868px){
 .contact-me a{
